# packages/post/dist/swagger/swagger.json
@@ -7,25 +7,59 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IPost": {
+			"mongoose.Types.ObjectId": {
+				"type": "string"
+			},
+			"postDetail": {
 				"properties": {
+					"userId": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
 					"username": {
-						"type": "string"
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
 					},
 					"title": {
 						"type": "string"
 					},
-					"descriptions": {
-						"type": "string"
-					},
-					"userId": {
+					"description": {
 						"type": "string"
 					},
 					"postImage": {
 						"type": "string"
 					},
 					"category": {
-						"type": "string"
+						"type": "string",
+						"enum": [
+							"General Knowledge",
+							"Mental Consultant",
+							"Technology",
+							"Mathematic",
+							"Physical",
+							"Biology",
+							"Chemistry",
+							"Writing",
+							"History",
+							"English"
+						]
+					},
+					"Date": {
+						"properties": {
+							"endtime": {
+								"type": "string"
+							},
+							"startTime": {
+								"type": "string"
+							},
+							"endDate": {
+								"type": "string",
+								"format": "date-time"
+							},
+							"startDate": {
+								"type": "string",
+								"format": "date-time"
+							}
+						},
+						"type": "object"
 					},
 					"like": {
 						"type": "number",
@@ -39,10 +73,6 @@
 						"format": "date-time"
 					}
 				},
-				"required": [
-					"title",
-					"category"
-				],
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -60,7 +90,7 @@
 	"paths": {
 		"/v1/post": {
 			"post": {
-				"operationId": "SavePost",
+				"operationId": "CreatePost",
 				"responses": {
 					"201": {
 						"description": "Created successfully",
@@ -78,22 +108,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"allOf": [
-									{
-										"$ref": "#/components/schemas/IPost"
-									},
-									{
-										"properties": {
-											"userId": {
-												"type": "string"
-											}
-										},
-										"required": [
-											"userId"
-										],
-										"type": "object"
-									}
-								]
+								"$ref": "#/components/schemas/postDetail"
 							}
 						}
 					}
@@ -101,11 +116,11 @@
 			}
 		},
 		"/v1/post/{id}": {
-			"put": {
+			"patch": {
 				"operationId": "UpdatePost",
 				"responses": {
-					"200": {
-						"description": "Okay",
+					"201": {
+						"description": "Created successfully",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -129,7 +144,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IPost"
+								"$ref": "#/components/schemas/postDetail"
 							}
 						}
 					}
