# packages/post/src/controllers/post.controller.ts
@@ -1,68 +1,74 @@
-// import { IPost } from "@post/database/model/post.model";
-// import validateInput from "@post/middlewares/input-validation";
-// import { verifyToken } from "@post/middlewares/tokenVerify";
-// import { PostSaveSchema } from "@post/schema/post.schema";
-// import { PostService } from "@post/services/post.service";
-// import { StatusCode } from "@post/utils/const";
-// import { logger } from "@post/utils/logger";
-// import {
-//   Body,
-//   Middlewares,
-//   Path,
-//   Post,
-//   Put,
-//   Route,
-//   SuccessResponse,
-// } from "tsoa";
+import {
+  Body,
+  Controller,
+  Middlewares,
+  Patch,
+  Path,
+  Post,
+  Request,
+  Route,
+  SuccessResponse,
+} from "tsoa";
+import validateInput from "@post/middlewares/input-validation";
+import { PostSaveSchema } from "@post/schema/post.schema";
+import { PostService } from "@post/services/post.service";
+import { StatusCode } from "@post/utils/const";
+import { logger } from "@post/utils/logger";
+import { verifyToken } from "@post/middlewares/tokenVerify";
+import { postDetail } from "@post/database/@types/post.interface";
+import CustomError from "@post/errors/customError";
 
-// @Route("v1/post")
-// export class PostController {
-//   private postService: PostService;
+const postService = new PostService();
 
-//   constructor() {
-//     this.postService = new PostService();
-//   }
+@Route("v1/post")
+export class PostController extends Controller {
+  @SuccessResponse(StatusCode.Created, "Created successfully")
+  @Post("/")
+  @Middlewares(validateInput(PostSaveSchema))
+  @Middlewares(verifyToken)
+  public async CreatePost(
+    @Body() requestBody: postDetail,
+    @Request() request: any
+  ): Promise<any> {
+    try {
+      const detailPost = {
+        ...requestBody,
+        userId: request.userId,
+        username: request.username,
+      };
+      const post = await postService.createPost(detailPost);
+      return {
+        message: "Post created successfully",
+        data: post,
+      };
+    } catch (error) {
+      logger.error(`Service method error: ${error}`);
+      throw error;
+    }
+  }
 
-//   @SuccessResponse(StatusCode.Created, "Created successfully")
-//   @Post("/")
-//   @Middlewares(validateInput(PostSaveSchema))
-//   @Middlewares(verifyToken)
-//   public async SavePost(
-//     @Body() reqBody: IPost & { userId: string }
-//   ): Promise<any> {
-//     try {
-//       if (!reqBody) {
-//         throw new Error("Request body is empty");
-//       }
-//       const post = { ...reqBody , userId: reqBody.userId , username: reqBody.username}
-//       const newPost = await this.postService.createPost(post);
-//       return {
-//         message: "Post created successfully",
-//         data: newPost,
-//       };
-//     } catch (error) {
-//       console.log("Error: ", error);
-//       logger.error(`Service method error: ${error}`);
-//       throw error;
-//     }
-//   }
-
-//   @SuccessResponse(StatusCode.OK, "Okay")
-//   @Put("/:id")
-//   @Middlewares(validateInput(PostSaveSchema))
-//   public async UpdatePost(
-//     @Path() id: string,
-//     @Body() reqBody: IPost
-//   ): Promise<any> {
-//     try {
-//       const updatedPost = await this.postService.updatePost(id, reqBody);
-//       return {
-//         message: "Post updated successfully",
-//         data: updatedPost,
-//       };
-//     } catch (error) {
-//       logger.error(`PostService controller method error: ${error}`);
-//       throw error;
-//     }
-//   }
-// }
+  @SuccessResponse(StatusCode.Created, "Created successfully")
+  @Patch("/:id")
+  @Middlewares(validateInput(PostSaveSchema))
+  @Middlewares(verifyToken)
+  public async UpdatePost(
+    @Request() request: any,
+    @Path() id: string,
+    @Body() requestBody: postDetail
+  ): Promise<any> {
+    try {
+      const existPost = await postService.findPostById(request.id);
+      if (!existPost) {
+        throw new CustomError("Post not found", StatusCode.NotFound);
+      }
+      const post = await postService.updatePost(id, requestBody);
+      return {
+        message: "Post updated successfully",
+        data: post,
+      };
+    } catch (error) {
+      logger.error(`Service method error: ${error}`);
+      throw error;
+    }
+  }
+}
