# packages/post/src/database/model/@types/Post-model.interface.ts
@@ -1,27 +1,0 @@
-export interface PostTypesRepo extends UserTypes{
-    userId?: string;
-    username?: string;
-    profile?: string;
-    title?: string;
-    description?: string;
-    postImage?: string;
-    category?: string;
-    like?: number;
-    isSave?: boolean;
-    createdAt?: Date;
-}
-
-export interface UserTypes {
-    _id?: string;
-    username?: string;
-    email?: string;
-    profile?: string;
-    favorites?: string[];
-    questions?: string[];
-    bio?: string;
-    work?: string;
-    answers?: number;
-    posts?: number;
-    gender?: string;
-    createdAt?: Date | string;
-}
