# packages/post/src/database/model/post.model.ts
@@ -1,30 +1,37 @@
 import mongoose from "mongoose";
-import { PostTypesRepo } from "./@types/Post-model.interface";
-import { optional } from "zod";
 
-export interface IPost {
-  username?: string
-  title: string;
-  descriptions?: string;
-  userId?: string;
-  postImage?: string;
-  category: string;
-  like?: number;
-  isSave?: boolean;
-  createdAt?: Date;
-}
 
-const postModel = new mongoose.Schema(
+const PostCard = new mongoose.Schema(
   {
     userId: { type: mongoose.Schema.Types.ObjectId, ref: "User" },
-    username: { type: mongoose.Schema.Types.String, ref: "User"},
+    username: { type: mongoose.Schema.Types.String, ref: "User" },
     title: { type: String, required: true },
     descriptions: { type: String, required: true },
-    postImage: { type: String , optional},
-    category: { type: String, required: true },
+    postImage: { type: String },
+    category: {
+      type: String,
+      enum: [
+        "Genaral Knowledge",
+        "Mental Consultant",
+        "Technology",
+        "Mathematic",
+        "Physical",
+        "Biology",
+        "Chemistry",
+        "Writing",
+        "History",
+        "English",
+      ],
+    },
+    Date: {
+      startDate: Date,
+      endDate: Date,
+      startTime: String,
+      endTime: String,
+    },
     like: { type: Number, default: 0 },
     isSave: { type: Boolean, default: false },
-    createdAt: { type: Date, optional },
+    createdAt: { type: Date },
   },
   {
     toJSON: {
@@ -36,8 +43,7 @@ const postModel = new mongoose.Schema(
   }
 );
 
-export const PostSchema = mongoose.model<PostTypesRepo> (
-  "CreatePost", 
-  postModel
-)
-
+export const PostModel = mongoose.model(
+  "PostModel",
+  PostCard
+);
